adding js logic

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="mui-col-md-6">
           <header>
             <h1 class="page-title mui--text-center">Jack's Simon Game<br>
-              <small>
+              <small id="message-box">
                 A front end project for Free Code Camp
               </small>
             </h1>
@@ -51,10 +51,10 @@
             <button id="restart-button" class="mui-btn mui-btn--raised mui-btn--danger">RESTART</button>
           </div>
           <div class="mui-col-sm-6">
-            <button id="strict-mode" class="mui-btn mui-btn--raised mui-btn--accent">STRICT</button>
+            <button id="strict-mode" class="mui-btn mui-btn--raised mui-btn--accent game-mode">STRICT</button>
           </div>
           <div class="mui-col-sm-6">
-            <button id="normal-mode" class="mui-btn mui-btn--raised mui-btn--primary">NORMAL</button>
+            <button id="normal-mode" class="mui-btn mui-btn--raised mui-btn--primary game-mode">NORMAL</button>
           </div>
         </div>
       </div>
