add background, set message for round and restart game

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="mui-row flex-center-align">
         <div class="mui-col-md-6">
           <header>
-            <h1 class="page-title mui--text-center">Jack's Simon Game<br>
+            <h1 class="page-title mui--text-center"><span id="round-count">Jack's Simon Game</span><br>
               <small id="message-box">
                 A front end project for Free Code Camp
               </small>
